<resources>
    <string name="app_name">StreetSmart</string>
    <string name="google_api_key">AIzaSyCAAxR0UmslfgmZQfYkhxdAIRIiIIUj_Mg</string>
    <string name="map_type_satellite">Satellite</string>
    <string name="map_type_normal">Normal</string>
    <string name="map_type_hybrid">Hybrid</string>
    <string name="map_type_terrain">Terrain</string>
    <string name="map_type_none">None</string>
    <string name="map_type_title">Map Type</string>
    <string name="update_map_type">Update Map</string>
    <string name="dialog_message">Recent Traffic</string>
    <string name="hist_email_subject">"StreetSmart API Historical Data"</string>
    <string name="hist_email_body">"Find your historical results attached!\n\nStreetSmart API \uD83D\uDE00"</string>
    <string name="hist_export">"Export"</string>
</resources>
