<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.chadlagore.streetsmart.MainActivity">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.521"
        app:layout_constraintRight_toRightOf="parent">

        <fragment
            android:id="@+id/map"
            android:name="com.example.chadlagore.streetsmart.MapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="818dp"
        android:layout_height="51dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="1.0"
        android:layout_marginStart="8dp"
        android:id="@+id/linearLayout">

        <Button
            android:id="@+id/satellite_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onSatelliteClick"
            android:text="@string/map_type_satellite" />

        <Button
            android:id="@+id/normal_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onNormalClick"
            android:text="@string/map_type_normal" />

        <Button
            android:id="@+id/hybrid_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onHybridClick"
            android:text="@string/map_type_hybrid" />

        <Button
            android:id="@+id/terrain_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onTerrainClick"
            android:text="@string/map_type_terrain" />

        <Button
            android:id="@+id/none_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onNoneClick"
            android:text="@string/map_type_none" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
